# pdfk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: update-homebrew.yml
src/: main.rs
src/cli/: mod.rs
src/commands/: audit.rs  change_password.rs  check.rs  info.rs  lock.rs  mod.rs  unlock.rs
src/core/: encryption.rs  mod.rs  permissions.rs
src/pdf/: reader.rs  writer.rs
src/utils/: batch.rs  mod.rs  output.rs  password.rs
tests/: integration_tests.rs
tests/common/: mod.rs
