[package]
name = "pdfk"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Kumar Anirudha"]
description = "Modern PDF password CLI"
license = "MIT"
repository = "https://github.com/anistark/pdfk"
homepage = "https://github.com/anistark/pdfk"

[[bin]]
name = "pdfk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
lopdf = "0.39.0"
aes = "0.8.4"
sha2 = "0.10.9"
rand = "0.10.0"
indicatif = "0.18.4"
cbc = "0.1.2"
ecb = "0.1.2"
md-5 = "0.10.6"
rc4 = "0.1.0"
rpassword = "7.4.0"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
